--- a/vim-template/=template=.tex
+++ b/vim-template/=template=.tex
@@ -1,17 +1,38 @@
-% vim:ft=tex:
-%
-\documentclass[12pt]{article}
 
-\title{
-	%FILE%
-}
-\author{
-	%USER% --- \texttt{%MAIL%}
-}
-
+% vim:ft=tex: %
+\documentclass[]{jarticle}
+\usepackage{amsthm} %theolem
+\usepackage{amsmath} %\eqref \text
+\usepackage{amssymb}
+\usepackage{bm}
+\usepackage{mathtools}
+\mathtoolsset{showonlyrefs}
+\theoremstyle{definition}
+\newtheorem{define}{定義}
+\newtheorem{algorithm}{アルゴリズム}
+\newtheorem{problem}{問題}
+\newtheorem{lemmma}{補題}
+\newtheorem{theolem}{定理}
+\newtheorem{proposition}{命題}
+\newtheorem{example}{例}
+\newcommand{\defpro}{\overset{\mathrm{def}}{\Leftrightarrow}}
+\renewcommand\proofname{\bf 証明}
+%\DeclareFontShape{JY1}{mc}{m}{it}{<5> <6> <7> <8> <9> <10> sgen*min
+    %<10.95><12><14.4><17.28><20.74><24.88> min10 <-> min10}{}
+%\DeclareFontShape{JT1}{mc}{m}{it}{<5> <6> <7> <8> <9> <10> sgen*tmin
+    %<10.95><12><14.4><17.28><20.74><24.88> tmin10 <-> tmin10}{}
+%\DeclareFontShape{JY2}{mc}{m}{it}{<5> <6> <7> <8> <9> <10> sgen*min
+    %<10.95><12><14.4><17.28><20.74><24.88> min10 <-> min10}{}
+%\DeclareFontShape{JT2}{mc}{m}{it}{<5> <6> <7> <8> <9> <10> sgen*tmin
+    %<10.95><12><14.4><17.28><20.74><24.88> tmin10 <-> tmin10}{}
+\title{}
+\author{和田 篤}
+\date{\today}
 \begin{document}
 \maketitle
+\abstract{}
 
-%HERE%
+\section{}
 
 \end{document}
+
